--- a/app/views/pets/new.erb
+++ b/app/views/pets/new.erb
@@ -7,7 +7,7 @@
   <br>
   <label>Choose an existing owner:</label>
   <br>
-  <% Owner.all.each do |owner| %>
+  <% @owners.all.each do |owner| %>
     <input type="radio" name="pet[owner_id]" value="<%=owner.id%>" id="<%= owner.id %>"><%= owner.name %></input>
   <% end %>
   <br>
